sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:8: error: ')' expected but 'for' found.
    for (i <- beg to end){
    ^AlgCocktailSort2:15: error: 'while' expected but 'for' found.
    for ( i <- end to beg){
    ^AlgCocktailSort2:23: error: '(' expected but '}' found.
} 
^